# RapidPatch-Runtime-AE

./: .gitignore  CMakeLists.txt  Makefile  main.c  nrf52840.yaml  readme.md  stm32.yaml  stm32f407.yaml  update_keil_proj.py
app/: cve_trigger.h  dummy_cve.c  dummy_cve.h  ihp_cli.c  ihp_cli.h  ihp_config.h  ihp_porting.c  ihp_porting.h  rt_app.c  rt_app.h  stm32sys.c  stm32sys.h
hotpatch/include/: defs.h  ebpf_test.h  fixed_patch_point_def.h  fixed_patch_points.h  flash_api.h  iotpatch.h  patch_point.h  patch_service.h  patch_verify.h  profiling.h  test_free_rtos.h  utils.h
hotpatch/src/: cortex-m4_fbp.c  dynamic_patch_load.c  ebpf_test.c  fixed_patch_load.c  fixed_patch_points.c  flash_api.c  hw_bp.c  iotpatch.c  jit_dev_test.c  patch_service.c  profiling.c  utils.c
libebpf/: .gitignore  CMakeLists.txt  Readme.md  gen_vs17.bat
libebpf/include/: ebpf.h  ebpf_allocator.h  ebpf_lock.h  ebpf_mbedtls_checks.h  ebpf_porting.h  hashmap.h
libebpf/src/: ebpf_allocator.c  ebpf_code.h  ebpf_env.c  ebpf_env.h  ebpf_error.h  ebpf_helper_impl.h  ebpf_inst.h  ebpf_map.c  ebpf_map.h  ebpf_mbedtls_checks.c  ebpf_types.h  ebpf_vm.c  ebpf_vm.h  hashmap.c  jit.c  jit.h  jit_thumb2.c  jit_thumb2.h  main.c
update_server/: compile.sh  ebpf_code.h  ebpf_code.py  patch.json  patch_desc.yaml  server.py  vul_addr_map.py
update_server/patch_code/: AMNESIA33_cve_2020_17443.ebpf.c  AMNESIA33_cve_2020_17445.ebpf.c  atest_cve.ebpf.c  dummy_bug.ebpf.c  dummy_cve1.ebpf.c  ebpf_test.ebpf.c  freeRTOS_tcp_ip.ebpf.c  freertos_cve_2018_16524.ebpf.c  freertos_cve_2018_16528_1.ebpf.c  freertos_cve_2018_16528_2.ebpf.c  freertos_cve_2018_16603.ebpf.c  (+8 more)
